Footer and Header ready to go

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,19 @@ ul {
     padding: 0px;
 }
 
+header {
+  line-height: 40px;
+  min-width: 600px;
+  border-top: 1px solid #e4e4e4;
+}
+
+footer {
+  background: #f2f2f2;
+  line-height: 40px;
+  min-width: 600px;
+  border-top: 1px solid #e4e4e4;
+}
+
 li {
   padding: 5px;
 }
